objects/EUR_CRM_CIR_Contract_Activity_Line_Item__c.object
<CustomObject>
    <description>CIR = Contract Invoice Reconciliation</description>
    <fields>
        <fullName>EUR_CRM_Brand_Quality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand-Quality (EU)</label>
        <referenceTo>EUR_CRM_Quality__c</referenceTo>
        <relationshipLabel>CIR-Contract Activity Line Items</relationshipLabel>
        <relationshipName>CIR_Contract_Activity_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand (EU)</label>
        <referenceTo>EUR_CRM_Brand__c</referenceTo>
        <relationshipLabel>CIR-Contract Activity Line Items</relationshipLabel>
        <relationshipName>CIR_Contract_Activity_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contract_Activity_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Activity Item</label>
        <referenceTo>EUR_CRM_Contract_Activity_Item__c</referenceTo>
        <relationshipLabel>CIR-Contract Activity Line Items</relationshipLabel>
        <relationshipName>CIR_Contract_Activity_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contract_Product_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Product Item</label>
        <referenceTo>EUR_CRM_Contract_Product_Item__c</referenceTo>
        <relationshipLabel>CIR-Contract Activity Line Items</relationshipLabel>
        <relationshipName>CIR_Contract_Activity_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CIR-Contract Activity Line Item (EU)</label>
    <nameField>
        <displayFormat>CCALI-{0000000000}</displayFormat>
        <label>CIR-Contract Activity Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CIR-Contract Activity Line Item (EU)</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>